--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Butusov S.A.",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "uuid": "^9.0.0"
   }
