--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Приложение «библиотека»",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Butusov S.A.",
@@ -14,6 +15,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.20"
   }
 }
