--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "mongoose": "^6.7.4",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
