--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongoose": "^6.7.4",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
